--- a/.env.renkx
+++ b/.env.renkx
@@ -67,6 +67,7 @@ PHP_PHP_CONF_FILE=./renkxservices/php/php.ini
 PHP_FPM_CONF_FILE=./renkxservices/php/php-fpm.conf
 PHP_LOG_DIR=./renkxlogs/php
 PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,xmlrpc,zip,pdo_dblib,pdo_sqlsrv,sockets,shmop,pcntl,gettext,mongodb
+PHP_DNMP_IMAGE=dnmp-php7-005
 
 #
 # MySQL8
@@ -110,7 +111,12 @@ SUPERVISOR_PHP_LOG_DIR=./renkxlogs/supervisor
 SUPERVISOR_CONFIG=~/code/renkx/docker/dnmpconfig/supervisor/conf.d/
 SUPERVISOR_LOG=./renkxlogs/supervisor
 SUPERVISOR_CONF_FILE=./renkxservices/supervisor/supervisord.conf
-SUPERVISOR_CRONTAB_ROOT_FILE=~/code/renkx/docker/dnmpconfig/crontabs/root
+
+#
+# crontab
+#
+CRONTAB_PHP_LOG_DIR=./renkxlogs/crontab
+CRONTAB_ROOT_FILE=~/code/renkx/docker/dnmpconfig/crontabs/root
 
 # composer auth.json文件：拉取时所输入的账号密码
 COMPOSER_AUTH_JSON=~/code/renkx/docker/dnmpconfig/composer/auth.json
