--- a/.env.renkx
+++ b/.env.renkx
@@ -42,6 +42,7 @@ NGINX_LOG_DIR=./renkxlogs/nginx
 NGINX_INSTALL_APPS=
 
 DOMAIN_BBWAPI=bbwapi.f.jobuse.cn
+DOMAIN_JDJSJAPI=jdjsjapi.f.jobuse.cn
 
 #
 # PHP7
@@ -97,6 +98,9 @@ BBWWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/bbwws/laravel-echo-server.json
 
 # bbwtdtws json配置
 BBWTDTWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/bbwtdtws/laravel-echo-server.json
+
+# jdjsjws json配置
+JDJSJWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/jdjsjws/laravel-echo-server.json
 
 # root用户的.gitconfig文件
 ROOT_GITCONFIG_FILE=~/code/renkx/docker/dnmpconfig/git/gitconfig
