--- a/.env.renkx
+++ b/.env.renkx
@@ -86,6 +86,13 @@ REDIS_HOST_PORT=6379
 REDIS_CONF_FILE=./renkxservices/redis/redis.conf
 
 #
+# Mongo
+#
+MONGO_PORT=27017
+MONGO_USER=root
+MONGO_PASS=Mongo963
+
+#
 # Node
 #
 NODE_VERSION=10.16.1-alpine
