--- a/docker-compose.renkx.yml
+++ b/docker-compose.renkx.yml
@@ -138,6 +138,21 @@ services:
     networks:
       - default
 
+  mongodb:
+    image: mongo
+    container_name: mongodb
+    hostname: mongodb
+    restart: always
+    ports:
+      - "${MONGO_PORT}:27017"
+    volumes:
+      - ${DATA_DIR}/mongodb:/data/db/:cached
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: "${MONGO_USER}"
+      MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASS}"
+    networks:
+      - default
+
   frpc:
     build:
       context: ./renkxservices/frp
@@ -182,6 +197,26 @@ services:
       - ${BBWTDTWS_CONF_JSON}:/app/laravel-echo-server.json:cached
     extra_hosts:
       - "${DOMAIN_BBWAPI}:${NGINX_IPV4}"
+    healthcheck:
+      test: /usr/local/bin/health-check
+      start_period: 5s
+      interval: 3s
+      timeout: 3s
+      retries: 10
+    networks:
+      - default
+
+  jdjsjws:
+    image: oanhnn/laravel-echo-server:${LARAVEL_ECHO_SERVER_VERSION}
+    container_name: jdjsjws
+    hostname: jdjsjws
+    restart: always
+    tty: true
+    stdin_open: true
+    volumes:
+      - ${BBWWS_CONF_JSON}:/app/laravel-echo-server.json:cached
+    extra_hosts:
+      - "${DOMAIN_JDJSJAPI}:${NGINX_IPV4}"
     healthcheck:
       test: /usr/local/bin/health-check
       start_period: 5s
