--- a/renkxservices/supervisor/supervisord.conf
+++ b/renkxservices/supervisor/supervisord.conf
@@ -126,4 +126,4 @@ serverurl=unix:///run/supervisord.sock ; use a unix:// URL  for a unix socket
 ; include files themselves.
 
 [include]
-files = /etc/supervisor/conf.d/*-/*.ini
+files = /etc/supervisor/conf.d/*-/*-/*.ini
