--- a/docker-compose.renkx.yml
+++ b/docker-compose.renkx.yml
@@ -42,6 +42,7 @@ services:
     working_dir: /www
     volumes:
       - ${SOURCE_DIR}:/www/:cached
+      - ${SYS_DIR}:/renkxsys/:cached
       - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini:cached
       - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf:cached
       - ${PHP_LOG_DIR}:/var/log/php:cached
