--- a/renkxservices/php/php.ini
+++ b/renkxservices/php/php.ini
@@ -1764,45 +1764,67 @@ ldap.max_links = -1
 
 [opcache]
 ; Determines if Zend OPCache is enabled
-;opcache.enable=1
+opcache.enable=1
 
 ; Determines if Zend OPCache is enabled for the CLI version of PHP
+; 是否在命令行开启，这里默认设置为 0 ，暂且关闭
 ;opcache.enable_cli=1
 
 ; The OPcache shared memory storage size.
-;opcache.memory_consumption=128
+; 这个内存是用来存储编译后的字节码的，视你的程序
+; 代码量而定，Laravel 应用一般建议设置为 256，单位 MB，
+; 默认是 128
+opcache.memory_consumption=1024
 
 ; The amount of memory for interned strings in Mbytes.
-;opcache.interned_strings_buffer=8
+; 会对程序所有的字符串进行统一存储以加快存取速度，
+; 默认是 8m，建议 32 或者不超过 64。
+opcache.interned_strings_buffer=32
 
 ; The maximum number of keys (scripts) in the OPcache hash table.
 ; Only numbers between 200 and 1000000 are allowed.
-;opcache.max_accelerated_files=10000
+; 最大加速多少个脚本文件，视项目脚本文件数而定，
+; 合理区间 200~1000000 ，默认是 10000 ，建议 500000
+opcache.max_accelerated_files=1000000
 
 ; The maximum percentage of "wasted" memory until a restart is scheduled.
-;opcache.max_wasted_percentage=5
+; 最大作废比例百分比，到达这个比例会重启，默认是 5 ，建议 10
+opcache.max_wasted_percentage=10
 
 ; When this directive is enabled, the OPcache appends the current working
 ; directory to the script key, thus eliminating possible collisions between
 ; files with the same name (basename). Disabling the directive improves
 ; performance, but may break existing applications.
-;opcache.use_cwd=1
+; 开启情况下会在脚本名称前加上当前目录信息做为缓存的 Key，关闭可以
+; 提高性能，但是会面临出错的风险（文件名一致时），建议开启，关闭使用 0
+opcache.use_cwd=1
 
 ; When disabled, you must reset the OPcache manually or restart the
 ; webserver for changes to the filesystem to take effect.
-;opcache.validate_timestamps=1
+; 开启的话，会按照 opcache.revalidate_freq 设置的频率去检查文件
+; 是否修改以便重新缓存，默认开启，生产环境下请设置为关闭，然后
+; 写自动化脚本，在每次更新代码后自动重启 OPcache
+opcache.validate_timestamps=1
 
 ; How often (in seconds) to check file timestamps for changes to the shared
 ; memory storage allocation. ("1" means validate once per second, but only
 ; once per request. "0" means always validate)
-;opcache.revalidate_freq=2
+; 文件更新检测频率，单位秒，只有在 opcache.validate_timestamps
+; 开启时才有效。默认为 2，意味着 2 秒钟检查一次，会对文件系统造
+; 成负担，如果是在开发环境中请酌情使用，生产环境随意设置，因为
+; 我们会设置 validate_timestamps 为关闭。
+opcache.revalidate_freq=2
 
 ; Enables or disables file search in include_path optimization
+; 文件加载的逻辑，默认关闭，无需修改
 ;opcache.revalidate_path=0
 
 ; If disabled, all PHPDoc comments are dropped from the code to reduce the
 ; size of the optimized code.
-;opcache.save_comments=1
+; 开启的话会把代码注释一起缓存，关闭可减低内存使用，但是
+; 如果有一些代码依赖于注释里的指令，例如 Doctrine,
+; Zend Framework 2 和 PHPUnit，将会出现问题。建议开启
+opcache.save_comments=1
 
 ; If enabled, a fast shutdown sequence is used for the accelerated code
 ; Depending on the used Memory Manager this may cause some incompatibilities.
