--- a/.env.renkx
+++ b/.env.renkx
@@ -6,7 +6,6 @@ NGINX_IPV4=1.1.0.201
 #
 SOURCE_DIR=~/code/app
 
-
 #
 # SYS 配置
 #
@@ -149,3 +148,8 @@ ROOT_ZSHRC_FILE=~/code/renkx/docker/dnmpconfig/zsh/zshrc
 
 # laravel echo版本
 LARAVEL_ECHO_SERVER_VERSION=3.1.2
+
+#
+# Frp
+#
+FRP_VERSION=0.39.1
