--- a/docker-compose.renkx.yml
+++ b/docker-compose.renkx.yml
@@ -21,13 +21,13 @@ services:
       - "${NGINX_HTTP_HOST_PORT}:80"
       - "${NGINX_HTTPS_HOST_PORT}:443"
     volumes:
-      - ${SOURCE_DIR}:/www/:cached
-      - ${NGINX_SSL_CERTIFICATE_DIR}:/ssl:cached
-      - ${NGINX_CONFD_DIR}:/etc/nginx/conf.d/:cached
-      - ${NGINX_CONF_FILE}:/etc/nginx/nginx.conf:cached
-      - ${NGINX_FASTCGI_PHP_CONF}:/etc/nginx/fastcgi-php.conf:cached
-      - ${NGINX_FASTCGI_PARAMS}:/etc/nginx/fastcgi_params:cached
-      - ${NGINX_LOG_DIR}:/var/log/nginx/:cached
+      - ${SOURCE_DIR}:/www/
+      - ${NGINX_SSL_CERTIFICATE_DIR}:/ssl
+      - ${NGINX_CONFD_DIR}:/etc/nginx/conf.d/
+      - ${NGINX_CONF_FILE}:/etc/nginx/nginx.conf
+      - ${NGINX_FASTCGI_PHP_CONF}:/etc/nginx/fastcgi-php.conf
+      - ${NGINX_FASTCGI_PARAMS}:/etc/nginx/fastcgi_params
+      - ${NGINX_LOG_DIR}:/var/log/nginx/
     environment:
       TZ: "$TZ"
     restart: always
@@ -41,16 +41,16 @@ services:
     hostname: php
     working_dir: /www
     volumes:
-      - ${SOURCE_DIR}:/www/:cached
-      - ${SYS_DIR}:/renkxsys/:cached
-      - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini:cached
-      - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf:cached
-      - ${PHP_LOG_DIR}:/var/log/php:cached
-      - ${COMPOSER_CACHE_DIR}:/tmp/composer/cache:cached
-      - ${COMPOSER_AUTH_JSON}:/tmp/composer/auth.json:cached
-      - ${COMPOSER_CONFIG_JSON}:/tmp/composer/config.json:cached
-      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig:cached
-      - ${ROOT_SSH_DIR}:/root/.ssh:cached
+      - ${SOURCE_DIR}:/www/
+      - ${SYS_DIR}:/renkxsys/
+      - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini
+      - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf
+      - ${PHP_LOG_DIR}:/var/log/php
+      - ${COMPOSER_CACHE_DIR}:/tmp/composer/cache
+      - ${COMPOSER_AUTH_JSON}:/tmp/composer/auth.json
+      - ${COMPOSER_CONFIG_JSON}:/tmp/composer/config.json
+      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig
+      - ${ROOT_SSH_DIR}:/root/.ssh
     extra_hosts:
       - "${DOMAIN_JDJSJAPI}:${NGINX_IPV4}"
     restart: always
@@ -71,15 +71,15 @@ services:
   #    container_name: php
   #    hostname: php
   #    volumes:
-  #      - ${SOURCE_DIR}:/www/:cached
-  #      - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini:cached
-  #      - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf:cached
-  #      - ${PHP_LOG_DIR}:/var/log/php:cached
-  #      - ${COMPOSER_CACHE_DIR}:/tmp/composer/cache:cached
-  #      - ${COMPOSER_AUTH_JSON}:/tmp/composer/auth.json:cached
-  #      - ${COMPOSER_CONFIG_JSON}:/tmp/composer/config.json:cached
-  #      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig:cached
-  #      - ${ROOT_SSH_DIR}:/root/.ssh:cached
+  #      - ${SOURCE_DIR}:/www/
+  #      - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini
+  #      - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf
+  #      - ${PHP_LOG_DIR}:/var/log/php
+  #      - ${COMPOSER_CACHE_DIR}:/tmp/composer/cache
+  #      - ${COMPOSER_AUTH_JSON}:/tmp/composer/auth.json
+  #      - ${COMPOSER_CONFIG_JSON}:/tmp/composer/config.json
+  #      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig
+  #      - ${ROOT_SSH_DIR}:/root/.ssh
   #    restart: always
   #    cap_add:
   #      - SYS_PTRACE
@@ -92,12 +92,12 @@ services:
     hostname: crontab
     working_dir: /www
     volumes:
-      - ${SOURCE_DIR}:/www/:cached
-      - ${SYS_DIR}:/renkxsys/:cached
-      - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini:cached
-      - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf:cached
-      - ${CRONTAB_PHP_LOG_DIR}:/var/log/php:cached
-      - ${CRONTAB_ROOT_FILE}:/etc/crontabs/root:cached
+      - ${SOURCE_DIR}:/www/
+      - ${SYS_DIR}:/renkxsys/
+      - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini
+      - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf
+      - ${CRONTAB_PHP_LOG_DIR}:/var/log/php
+      - ${CRONTAB_ROOT_FILE}:/etc/crontabs/root
     restart: always
     cap_add:
       - SYS_PTRACE
@@ -114,8 +114,8 @@ services:
     ports:
       - "${MYSQL_HOST_PORT}:3306"
     volumes:
-      - ${MYSQL_CONF_FILE}:/etc/mysql/conf.d/mysql.cnf:cached
-      - ${DATA_DIR}/mysql8:/var/lib/mysql/:cached
+      - ${MYSQL_CONF_FILE}:/etc/mysql/conf.d/mysql.cnf
+      - ${DATA_DIR}/mysql8:/var/lib/mysql/
     restart: always
     networks:
       - default
@@ -132,7 +132,7 @@ services:
     ports:
       - "${REDIS_HOST_PORT}:6379"
     volumes:
-      - ${REDIS_CONF_FILE}:/etc/redis.conf:cached
+      - ${REDIS_CONF_FILE}:/etc/redis.conf
       # vagrant报错情况：不开持久化，挂载data目录 docker整体崩溃
       #- ${DATA_DIR}/redis:/data/:rw
     restart: always
@@ -150,7 +150,7 @@ services:
     ports:
       - "${MONGO_PORT}:27017"
     volumes:
-      - ${DATA_DIR}/mongodb:/data/db/:cached
+      - ${DATA_DIR}/mongodb:/data/db/
     environment:
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USER}"
       MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASS}"
@@ -167,8 +167,8 @@ services:
     hostname: frpc
     restart: always
     volumes:
-      - ${FRPC_CONF_DIR}/frpc.ini:/frpc.ini:cached
-      - ${FRPC_CONF_DIR}/conf:/conf:cached
+      - ${FRPC_CONF_DIR}/frpc.ini:/frpc.ini
+      - ${FRPC_CONF_DIR}/conf:/conf
     command: /frp/frpc -c /frpc.ini
     networks:
       - default
@@ -181,7 +181,7 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - ${BBWWS_CONF_JSON}:/app/laravel-echo-server.json:cached
+      - ${BBWWS_CONF_JSON}:/app/laravel-echo-server.json
     extra_hosts:
       - "${DOMAIN_BBWAPI}:${NGINX_IPV4}"
     healthcheck:
@@ -201,7 +201,7 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - ${BBWTDTWS_CONF_JSON}:/app/laravel-echo-server.json:cached
+      - ${BBWTDTWS_CONF_JSON}:/app/laravel-echo-server.json
     extra_hosts:
       - "${DOMAIN_BBWAPI}:${NGINX_IPV4}"
     healthcheck:
@@ -221,7 +221,7 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - ${JDJSJWS_CONF_JSON}:/app/laravel-echo-server.json:cached
+      - ${JDJSJWS_CONF_JSON}:/app/laravel-echo-server.json
     extra_hosts:
       - "${DOMAIN_JDJSJAPI}:${NGINX_IPV4}"
     healthcheck:
@@ -239,14 +239,14 @@ services:
     hostname: supervisor
     working_dir: /etc/supervisor/conf.d
     volumes:
-      - ${SOURCE_DIR}:/www/:cached
-      - ${SYS_DIR}:/renkxsys/:cached
-      - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini:cached
-      - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf:cached
-      - ${SUPERVISOR_PHP_LOG_DIR}:/var/log/php:cached
-      - ${SUPERVISOR_LOG}:/var/log/supervisor/:cached
-      - ${SUPERVISOR_CONFIG}:/etc/supervisor/conf.d/:cached
-      - ${SUPERVISOR_CONF_FILE}:/etc/supervisor/supervisord.conf:cached
+      - ${SOURCE_DIR}:/www/
+      - ${SYS_DIR}:/renkxsys/
+      - ${PHP_PHP_CONF_FILE}:/usr/local/etc/php/php.ini
+      - ${PHP_FPM_CONF_FILE}:/usr/local/etc/php-fpm.d/www.conf
+      - ${SUPERVISOR_PHP_LOG_DIR}:/var/log/php
+      - ${SUPERVISOR_LOG}:/var/log/supervisor/
+      - ${SUPERVISOR_CONFIG}:/etc/supervisor/conf.d/
+      - ${SUPERVISOR_CONF_FILE}:/etc/supervisor/supervisord.conf
     restart: always
     cap_add:
       - SYS_PTRACE
@@ -289,10 +289,10 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - ${SOURCE_DIR}:/www/:cached
-      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig:cached
-      - ${ROOT_SSH_DIR}:/root/.ssh:cached
-      - ${ROOT_OH_MY_ZSH}:/root/.oh-my-zsh:cached
-      - ${ROOT_ZSHRC_FILE}:/root/.zshrc:cached
+      - ${SOURCE_DIR}:/www/
+      - ${ROOT_GITCONFIG_FILE}:/root/.gitconfig
+      - ${ROOT_SSH_DIR}:/root/.ssh
+      - ${ROOT_OH_MY_ZSH}:/root/.oh-my-zsh
+      - ${ROOT_ZSHRC_FILE}:/root/.zshrc
     networks:
       - default
