--- a/.env.renkx
+++ b/.env.renkx
@@ -76,6 +76,33 @@ PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,x
 PHP_DNMP_IMAGE=dnmp-php7-005
 
 #
+# PHP8
+#
+# Available PHP_EXTENSIONS:
+#
+# pdo_mysql,zip,pcntl,mysqli,mbstring,exif,bcmath,calendar,
+# sockets,gettext,shmop,sysvmsg,sysvsem,sysvshm,pdo_rebird,
+# pdo_dblib,pdo_oci,pdo_odbc,pdo_pgsql,pgsql,oci8,odbc,dba,
+# gd,intl,bz2,soap,xsl,xmlrpc,wddx,curl,readline,snmp,pspell,
+# recode,tidy,gmp,imap,ldap,imagick,sqlsrv,mcrypt,opcache,
+# redis,memcached,xdebug,swoole,pdo_sqlsrv,sodium,yaf,mysql,
+# amqp,mongodb,event,rar,ast,yac,yar,yaconf,msgpack,igbinary,
+# seaslog,varnish,xhprof,xlswriter,memcache,rdkafka,zookeeper,
+# psr,phalcon,sdebug,ssh2,yaml,protobuf,hprose
+#
+# You can let it empty to avoid installing any extensions,
+# or install multi plugins as:
+# PHP_EXTENSIONS=pdo_mysql,mysqli,gd,curl,opcache
+#
+PHP8_VERSION=8.1.4
+PHP8_PHP_CONF_FILE=./renkxservices/php8/php.ini
+PHP8_FPM_CONF_FILE=./renkxservices/php8/php-fpm.conf
+PHP8_LOG_DIR=../renkxlogs/php8
+PHP8_UID=1008
+PHP8_GID=1008
+PHP8_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,xmlrpc,zip,pdo_dblib,pdo_sqlsrv,sockets,shmop,pcntl,gettext,mongodb
+
+#
 # MySQL8
 #
 MYSQL_VERSION=8.0.23
