--- a/renkxservices/php8/Dockerfile
+++ b/renkxservices/php8/Dockerfile
@@ -1,40 +1,18 @@
-ARG PHP_VERSION
-FROM ${PHP_VERSION}
-
-ARG TZ
-ARG PHP_EXTENSIONS
-ARG CONTAINER_PACKAGE_URL
-
-
-RUN if [ $CONTAINER_PACKAGE_URL ] ; then sed -i "s/dl-cdn.alpinelinux.org/${CONTAINER_PACKAGE_URL}/g" /etc/apk/repositories ; fi
-
-COPY ./extensions /tmp/extensions
-WORKDIR /tmp/extensions
-RUN chmod +x install.sh \
-    && sh install.sh \
-    && rm -rf /tmp/extensions
-
-ADD ./extensions/install-php-extensions  /usr/local/bin/
-
-RUN chmod uga+x /usr/local/bin/install-php-extensions
-
-RUN apk --no-cache add tzdata \
-    && cp "/usr/share/zoneinfo/$TZ" /etc/localtime \
-    && echo "$TZ" > /etc/timezone
-
-
-# Fix: https://github.com/docker-library/php/issues/240
-RUN apk add gnu-libiconv libstdc++ --no-cache --repository http://${CONTAINER_PACKAGE_URL}/alpine/edge/community/ --allow-untrusted
-ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
-
+# webapp 生成的 基础镜像
+FROM registry.cn-beijing.aliyuncs.com/kdd/php:php8-1.0
 
 # Install composer and change it's cache home
 RUN curl -o /usr/bin/composer https://mirrors.aliyun.com/composer/composer.phar \
     && chmod +x /usr/bin/composer
 ENV COMPOSER_HOME=/tmp/composer
 
-# php image's www-data user uid & gid are 82, change them to 1000 (primary user)
-RUN apk --no-cache add shadow && usermod -u 1000 www-data && groupmod -g 1000 www-data
+# todo 设置扩展数据
+ADD ./renkxservices/extra  /root/extra
 
-
-WORKDIR /www
+# todo 安装 zsh和git 等
+RUN apk --no-cache add zsh git openssh vim \
+    && mv /root/extra/oh-my-zsh /root/.oh-my-zsh \
+    && mv /root/extra/zshrc /root/.zshrc \
+	&& rm -rf /var/cache/apk/* /root/extra \
+    # todo 最后需要删除zsh操作记录
+    && rm -f /root/.zsh_history.new
