--- a/.env.renkx
+++ b/.env.renkx
@@ -48,6 +48,7 @@ NGINX_INSTALL_APPS=
 
 DOMAIN_BBWAPI=bbwapi.f.jobuse.cn
 DOMAIN_JDJSJAPI=jdjsjapi.f.jobuse.cn
+DOMAIN_AKITADOAPI=akitadoapi.f.jobuse.cn
 
 #
 # PHP7
@@ -141,6 +142,9 @@ BBWTDTWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/bbwtdtws/laravel-echo-server.j
 # jdjsjws json配置
 JDJSJWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/jdjsjws/laravel-echo-server.json
 
+# akitadows json配置
+AKITADOWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/akitadows/laravel-echo-server.json
+
 # root用户的.gitconfig文件
 ROOT_GITCONFIG_FILE=~/code/renkx/docker/dnmpconfig/git/gitconfig
 
@@ -156,10 +160,24 @@ SUPERVISOR_LOG=./renkxlogs/supervisor
 SUPERVISOR_CONF_FILE=./renkxservices/supervisor/supervisord.conf
 
 #
+# supervisor8 基于php8
+#
+SUPERVISOR8_PHP_LOG_DIR=./renkxlogs/supervisor8
+SUPERVISOR8_CONFIG=~/code/renkx/docker/dnmpconfig/supervisor8/conf.d/
+SUPERVISOR8_LOG=./renkxlogs/supervisor8
+SUPERVISOR8_CONF_FILE=./renkxservices/supervisor8/supervisord.conf
+
+#
 # crontab
 #
 CRONTAB_PHP_LOG_DIR=./renkxlogs/crontab
 CRONTAB_ROOT_FILE=~/code/renkx/docker/dnmpconfig/crontabs/root
+
+#
+# crontab8 基于php8
+#
+CRONTAB8_PHP_LOG_DIR=./renkxlogs/crontab8
+CRONTAB8_ROOT_FILE=~/code/renkx/docker/dnmpconfig/crontabs8/root
 
 # composer auth.json文件：拉取时所输入的账号密码
 COMPOSER_AUTH_JSON=~/code/renkx/docker/dnmpconfig/composer/auth.json
