--- a/.env.renkx
+++ b/.env.renkx
@@ -49,6 +49,7 @@ NGINX_INSTALL_APPS=
 DOMAIN_BBWAPI=bbwapi.f.jobuse.cn
 DOMAIN_JDJSJAPI=jdjsjapi.f.jobuse.cn
 DOMAIN_AKITADOAPI=akitadoapi.f.jobuse.cn
+DOMAIN_YUNDINGAPI=yundingapi.f.jobuse.cn
 
 #
 # PHP7
@@ -144,6 +145,9 @@ JDJSJWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/jdjsjws/laravel-echo-server.
 
 # akitadows json配置
 AKITADOWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/akitadows/laravel-echo-server.json
+
+# yundingws json配置
+YUNDINGWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/ws/yundingws/laravel-echo-server.json
 
 # root用户的.gitconfig文件
 ROOT_GITCONFIG_FILE=~/code/renkx/docker/dnmpconfig/git/gitconfig
