--- a/.env.renkx
+++ b/.env.renkx
@@ -103,6 +103,7 @@ PHP8_LOG_DIR=../renkxlogs/php8
 PHP8_UID=1008
 PHP8_GID=1008
 PHP8_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,xmlrpc,zip,pdo_dblib,pdo_sqlsrv,sockets,shmop,pcntl,gettext,mongodb
+PHP8_COMMAND=su -m www-data -c '/usr/local/bin/php /www/yunding/yunding-api/artisan octane:start --host=0.0.0.0 --port=9000'
 
 #
 # MySQL8
